<resources>
    <string name="app_name">PizzaCostCalculator</string>

    <string name="pizza_image_description">Pizza image</string>
    <string name="hint_pizza_count">Enter number of pizzas</string>

    <string name="label_select_size">Select Size:</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="size_extra_large">Extra Large</string>

    <string name="label_select_toppings">Select Toppings:</string>
    <string name="topping_bacon">Bacon</string>
    <string name="topping_banana_peppers">Banana Peppers</string>
    <string name="topping_grilled_chicken">Grilled Chicken</string>
    <string name="topping_ground_beef">Ground Beef</string>
    <string name="topping_mushroom">Mushroom</string>
    <string name="topping_pepperoni">Pepperoni</string>
    <string name="topping_extra_cheese">Extra Cheese</string>

    <string name="btn_clear">Clear</string>
    <string name="btn_calculate">Calculate</string>

    <string name="total_cost_default">Total Cost: $0.00</string>
</resources>